grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: collectors-channel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-deployment
  template:
    metadata:
      labels:
        app: grafana-deployment
        version: "10.0.8"
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.0.8
          ports:
            - name: http-port
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-persistentvolumeclaim
