grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: collectors-channel
spec:
  selector:
    app: grafana-deployment
  ports:
    - name: http-port
      targetPort: http-port
      protocol: TCP
      port: 3000
