grafana/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailscale-ingress
  namespace: collectors-channel
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: grafana-service
      port:
        number: 3000
  tls:
    - hosts:
        - grafana-collectors-channel
