grafana/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: collectors-channel
spec:
  hosts:
    - grafana-collectors.$DOMAIN
  gateways:
    - istio-custom/default-gateway
  http:
    - route:
        - destination:
            host: grafana-service
            port: 
              number: 3000
          weight: 100
